--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.7.2
+crispy-bootstrap4==2023.1
+crispy-bootstrap5==2023.10
 Django==5.0.1
+django-crispy-forms==2.1
 psycopg2-binary==2.9.9
 sqlparse==0.4.4
+typing_extensions==4.9.0
 tzdata==2023.4
